--- a/project_4/Proposal.html
+++ b/project_4/Proposal.html
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div class="date">
-        November 7 2023
+        December 6 2023
     </div>
     <h2>
         Partnership Proposal for Architectural Site for BRANDING
@@ -98,6 +98,31 @@
         <li>Search Option with Different Filters</li>
         <li>Finding Valuable Works Based on People Votes</li>
     </ul>
+    <h4>
+        Details of Project:
+    </h4>
+    <p>
+        In a project like this, we can provide a main page that includes a navigation bar for easy access to other pages: Architectures, Projects, About Us, and Contact Us.
+    </p>
+    <p>
+        In a project like this, we can provide a main page that includes a navigation bar for easy access to other pages: Architectures, Projects, About Us, and Contact Us.
+    </p>
+    <p>
+        In the following Navigation Diagram, you can see a schema of how users can access the existing pages and the number of clicks required: (This diagram cover just important connections.)
+    </p>
+    <img src="Diagram_for_Navigation.png" alt="Diagram_for_Navigation">
+    <p>
+        These pages must retrieve data from a well-structured database. For this purpose, I have prepared a table schema for this functionality:
+    </p>
+    <img src="DB_schema.png" alt="Diagram_for_DataBase_schema">
+    <p>
+        Now, after discussing the concepts, we need to talk about the architecture of our work and identify the tools required for this purpose. For this reason, I have provided an additional chart to illustrate the various sections of projects and infrastructure:
+    </p>
+    <img src="Architecture_of_Project.png" alt="Architecture_of_Project">
+    <h4>
+        Time schedule:
+    </h4>
+    <img src="Time_Schedule.png" alt="Time_Schedule">
     <h4>
         Conclusion:
     </h4>
